# storage/api-docs/api-docs.json
@@ -159,89 +159,6 @@
                     }
                 }
             }
-        },
-        "/api/v1/category?search={search}": {
-            "get": {
-                "tags": [
-                    "Category"
-                ],
-                "summary": "Search category by name",
-                "description": "Search categories by name and return details with categories.",
-                "operationId": "1cca901a8fb0d96c98c5e7e39279b595",
-                "parameters": [
-                    {
-                        "name": "search",
-                        "in": "path",
-                        "description": "Parameter to search by name",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "Jaida"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "View category's details",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "id": {
-                                            "type": "number",
-                                            "example": 10
-                                        },
-                                        "name": {
-                                            "type": "string",
-                                            "example": "Camioneta Chevrolet"
-                                        },
-                                        "description": {
-                                            "type": "string",
-                                            "example": "Camioneta Chevrolet 2010"
-                                        },
-                                        "status": {
-                                            "type": "number",
-                                            "example": 1
-                                        },
-                                        "created_at": {
-                                            "type": "string",
-                                            "example": "2022-10-10 10:10:10.000000Z"
-                                        },
-                                        "updated_at": {
-                                            "type": "string",
-                                            "example": "2022-10-10 10:10:10.000000Z"
-                                        },
-                                        "categories": {
-                                            "type": "array",
-                                            "items": {
-                                                "properties": {
-                                                    "id": {
-                                                        "type": "number",
-                                                        "example": 10
-                                                    },
-                                                    "name": {
-                                                        "type": "string",
-                                                        "example": "Vehiculo"
-                                                    },
-                                                    "slug": {
-                                                        "type": "string",
-                                                        "example": "vehiculo"
-                                                    }
-                                                },
-                                                "type": "object"
-                                            }
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "An unexpected error occurred."
-                    }
-                }
-            }
         }
     }
 }
